2002-04-15  Max Horn  <max@quendi.de>

	* AUTHORS: added

	* all: updated copyright notice.

2002-04-13  Max Horn  <max@quendi.de>

	* fink.in: added 'require 5.006' to enforce Perl 5.6.0 or newer

2002-04-03  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.9.10

	* fink.info.in: Added Suggests field with storable-pm and term-readkey-pm 

2002-03-31  Finlay Dobbie <finlayd@users.sourceforge.net>

	* fink.in: Added brief note about index to command listing.
	
	* fink.8.in: Added index and information about fink.db.	

2002-03-26  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.9.9a

2002-03-21  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.9.9

2002-03-13  Peter O'Gorman <ogorman@users.sourceforge.net>

	* fink.in: Made option position strict for command
	options. eg 'fink install package --yes' no longer works	

2002-03-02  Peter O'Gorman <ogorman@users.sourceforge.net>

	* fink.8.in: Added information about fink.conf

	* fink.in: Changed behavior to show help if no command 

2002-02-23  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.9.8

	* bootstrap.pl: Report Darwin 5.3 as supported & tested

2002-01-26  Max Horn  <max@quendi.de>

	* INSTALL*, README*, USAGE*: Re-generated from XML source

	* fink.info.in: Changed maintainer from Christoph to me

	* fink.8.in: Added information on the command line options

	* fink.in (show_help): describe --yes; list short variants of all options;
	added "update" to the list of common commands

2002-01-19  Max Horn  <max@quendi.de>

	* bootstrap.pl: Report Darwin 5.0 - 5.2 as supported & tested

2002-01-11  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.9.7

2002-01-07  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.9.6a.

2002-01-05  Max Horn  <max@quendi.de>

	* VERSION: Bumped package manager version to 0.9.6.

2001-12-09  Max Horn  <max@quendi.de>
