@@ -1,11 +1,11 @@
-Generated from $Fink: install.xml,v 1.10 2002/01/24 21:04:29 fingolfin Exp $
+Generated from $Fink: install.xml,v 1.15 2002/04/15 19:53:09 fingolfin Exp $
 
- Fink 0.3.2a Installation
-==========================
+ Fink 0.4.0 Installation
+=========================
 
 These are the installation instructions for the "source" distribution of
-Fink 0.3.2a. This document does not apply to the "binary" distribution.
-There are instructions for both first time installation and upgrading from a
+Fink 0.4.0. This document does not apply to the "binary" distribution. There
+are instructions for both first time installation and upgrading from a
 previous version. Fast track instructions for the impatient are at the top.
 
 
@@ -22,22 +22,22 @@ can still use this section as an example.)
 
  First Time Installation Fast Track
 ------------------------------------
-Start out by copying the "fink-0.3.2a-full.tar.gz" file to your home folder.
+Start out by copying the "fink-0.4.0-full.tar.gz" file to your home folder.
 Then, open Terminal.app and follow the session below. Computer output is in
 "normal face" , your input is in "_bold_face_" (or otherwise highlighted).
 The actual input prompts from the shell may vary, and some chunks of the
 output have been omitted ( "..." ).
 
-   [frodo:~] testuser% _tar_xzf_fink-0.3.2a-full.tar.gz_
-   [frodo:~] testuser% _cd_fink-0.3.2a-full_
-   [frodo:~/fink-0.3.2a-full] testuser% _./bootstrap.sh_/sw_
+   [frodo:~] testuser% _tar_xzf_fink-0.4.0-full.tar.gz_
+   [frodo:~] testuser% _cd_fink-0.4.0-full_
+   [frodo:~/fink-0.4.0-full] testuser% _./bootstrap.sh_/sw_
    
    Welcome to Fink.
    
    ...
    Choose a method: [1] _1_
    
-   sudo /Users/testuser/fink-0.3.2a-full/bootstrap.pl .sudo '/sw'
+   sudo /Users/testuser/fink-0.4.0-full/bootstrap.pl .sudo '/sw'
    Password:_(your_normal_password_here)_
    ...
    OK, I'll ask you some questions and update the configuration file in
@@ -73,8 +73,8 @@ output have been omitted ( "..." ).
    shells, add 'source /sw/bin/init.csh' to the init script '.cshrc' in your
    home directory. Enjoy.
    
-   [frodo:~/fink-0.3.2a-full] testuser% _cd_
-   [frodo:~] testuser% _rm_-r_fink-0.3.2a-full_
+   [frodo:~/fink-0.4.0-full] testuser% _cd_
+   [frodo:~] testuser% _rm_-r_fink-0.4.0-full_
    [frodo:~] testuser% _pico_.cshrc_
 
 The last command launches you into a text file editor. Type "source
@@ -111,15 +111,15 @@ well-documented.
 
  Update Fast Track
 -------------------
-Start out by copying the "fink-0.3.2a-full.tar.gz" file to your home folder.
+Start out by copying the "fink-0.4.0-full.tar.gz" file to your home folder.
 Then, open Terminal.app and follow the session below. Computer output is in
 "normal face" , your input is in "_bold_face_" (or otherwise highlighted).
 The actual input prompts from the shell may vary, and some chunks of the
 output have been omitted ( "..." ).
 
-   [frodo:~] testuser% _tar_xzf_fink-0.3.2a-full.tar.gz_
-   [frodo:~] testuser% _cd_fink-0.3.2a-full_
-   [frodo:~/fink-0.3.2a-full] testuser% _./inject.pl_/sw_
+   [frodo:~] testuser% _tar_xzf_fink-0.4.0-full.tar.gz_
+   [frodo:~] testuser% _cd_fink-0.4.0-full_
+   [frodo:~/fink-0.4.0-full] testuser% _./inject.pl_/sw_
    sudo ./inject.pl /sw
    Password:_(your_normal_password_here)_
    Copying package descriptions
@@ -128,8 +128,8 @@ output have been omitted ( "..." ).
    
    Your Fink installation in '/sw' was updated with new fink packages.
    
-   [frodo:~/fink-0.3.2a-full] testuser% _cd_pkginfo_
-   [frodo:~/fink-0.3.2a-full/pkginfo] testuser% _./inject.pl_/sw_
+   [frodo:~/fink-0.4.0-full] testuser% _cd_pkginfo_
+   [frodo:~/fink-0.4.0-full/pkginfo] testuser% _./inject.pl_/sw_
    sudo ./inject.pl /sw
    Copying...
    ...
@@ -138,8 +138,8 @@ output have been omitted ( "..." ).
    files. Use appropriate fink commands to update the packages, e.g. 'fink
    update-all'.
    
-   [frodo:~/fink-0.3.2a-full/pkginfo] testuser% _cd_
-   [frodo:~] testuser% _rm_-r_fink-0.3.2a-full_
+   [frodo:~/fink-0.4.0-full/pkginfo] testuser% _cd_
+   [frodo:~] testuser% _rm_-r_fink-0.4.0-full_
    [frodo:~] testuser% _fink_update-all_
    ...
 
@@ -151,10 +151,9 @@ output have been omitted ( "..." ).
 --------------
 You need:
 
- * An installed Mac OS X system, version 10.0 or later. (There may still be
-   some stray linker-related problems with 10.1.) Darwin 1.3.1 should also
-   work, but this has not been tested. Earlier versions of both will _not_
-   work.
+ * An installed Mac OS X system, version 10.1 or later. Darwin 5.0 and later
+   should also work, but this has not been tested. Earlier versions of both
+   are not supported and probably will _not_ work.
 
  * Development tools. On Mac OS X, install the Developer.pkg package from
    the Developer Tools CD. On Darwin, the tools should be present in the
@@ -196,20 +195,20 @@ back to a working system when things break. You have been warned.
 
  Installation
 --------------
-First, you need to unpack the fink-0.3.2a-full.tar.gz tarball. It is
+First, you need to unpack the fink-0.4.0-full.tar.gz tarball. It is
 recommended that you do this from the command line - StuffIt Expander has a
 tendency to screw up text files. So, go to the directory where you put the
 tarball, and run this command:
 
-   tar xzf fink-0.3.2a-full.tar.gz
+   tar xzf fink-0.4.0-full.tar.gz
 
-You now have a directory named fink-0.3.2a-full. Change to it with "cd
-fink-0.3.2a-full" .
+You now have a directory named fink-0.4.0-full. Change to it with "cd
+fink-0.4.0-full" .
 
 The actual installation is performed by the perl script bootstrap.pl. It is
 accompanied by a small shell script, bootstrap.sh, which checks some basic
 requirements and then hands over control to the perl script. So, to start
-installation, go to the fink-0.3.2a-full directory and run this command:
+installation, go to the fink-0.4.0-full directory and run this command:
 
    ./bootstrap.sh
 
@@ -270,7 +269,7 @@ on Darwin and Mac OS X document [http://fink.sourceforge.net/doc/x11/].
 ===========================
 
 If you already have Fink 0.3.x installed, you can update your installation
-to 0.3.2a with the built-in 'selfupdate' command.
+to 0.4.0 with the built-in 'selfupdate' command.
 
 
  Updating The Package Manager
@@ -310,7 +309,7 @@ with the 'update' command.
 ===========================
 
 If you already have Fink 0.2.x installed, you can update your installation
-to 0.3.2a with this package.
+to 0.4.0 with this package.
 
 Actually, there are two pieces that are updated independently: the package
 manager and the package descriptions. It is recommended to update the
@@ -320,7 +319,7 @@ package manager first.
  Updating The Package Manager
 ------------------------------
 To update the package manager, run the inject.pl script in the
-fink-0.3.2a-full directory, like this:
+fink-0.4.0-full directory, like this:
 
    ./inject.pl
 
@@ -337,7 +336,7 @@ itself. ":-)" )
 
  Updating The Package Descriptions
 -----------------------------------
-If you downloaded the fink-0.3.2a-full tarball, the package descriptions are
+If you downloaded the fink-0.4.0-full tarball, the package descriptions are
 in the subdirectory pkginfo. To install them, run the inject.pl script in
 that directory:
 
@@ -347,8 +346,8 @@ that directory:
 This inject.pl script works just like the one for the package manager.
 
 You can also grab the package descriptions as a separate tarball,
-packages-0.3.2a. If you did that, just unpack it and run the inject.pl
-script inside.
+packages-0.4.0. If you did that, just unpack it and run the inject.pl script
+inside.
 
 As a third alternative, you can have Fink automatically update itself to the
 latest set of package descriptions by issuing the following command:
@@ -392,6 +391,8 @@ symlinks, use 'fink reinstall' on them to re-install the .deb package files.
  Upgrading From Fink 0.1.x
 ===========================
 
+ Clean cut
+-----------
 There is no direct upgrade path from Fink 0.1.x to Fink 0.2.x, because they
 use different methods for underlying package management (stow vs. dpkg). The
 only way to upgrade is to do a complete reinstall. The procedure is as
